--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.4.0",
+    "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-card-carousel": "^1.1.3",
+    "react-collapse": "^5.1.1",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
